[gd_scene load_steps=13 format=3 uid="uid://d85twhp5qb2t"]

[ext_resource type="PackedScene" uid="uid://cq863l4u8ria4" path="res://Scenes/player.tscn" id="1_25elt"]
[ext_resource type="Script" path="res://Scenes/GameManager.gd" id="1_58llm"]
[ext_resource type="PackedScene" uid="uid://cc8rci3t1tp2r" path="res://Scenes/background.tscn" id="2_ici7r"]
[ext_resource type="PackedScene" uid="uid://cyl8bruxshrkl" path="res://Scenes/bone_spawner.tscn" id="3_aapjj"]
[ext_resource type="Script" path="res://scripts/bone_destructor.gd" id="4_nwda2"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="6_853u8"]
[ext_resource type="PackedScene" uid="uid://bbf05vxls2o25" path="res://Scenes/game_over_screen.tscn" id="7_8cawq"]
[ext_resource type="AudioStream" uid="uid://d5a5mhbodhwf" path="res://Assets/Sounds/Game Over sound effect.mp3" id="8_nodmi"]
[ext_resource type="AudioStream" uid="uid://dr4dysy3aw4io" path="res://Assets/Sounds/Kevin MacLeod - Itty Bitty 8 Bit  NO COPYRIGHT 8-bit Music.mp3" id="9_2le8b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1oh33"]
size = Vector2(20, 780)

[sub_resource type="LabelSettings" id="LabelSettings_46wfu"]
font_size = 96
font_color = Color(0.996078, 0.956863, 0.996078, 1)
outline_size = 5
outline_color = Color(0.0941176, 0.247059, 0.223529, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8tvqc"]
font_size = 24
font_color = Color(0.996078, 0.956863, 0.996078, 1)
outline_size = 3
outline_color = Color(0.0941176, 0.247059, 0.223529, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_58llm")

[node name="Player" parent="." instance=ExtResource("1_25elt")]
position = Vector2(162, 244)
motion_mode = 1
gravity = 20.0
rotation_speed = 0.04

[node name="Background" parent="." instance=ExtResource("2_ici7r")]

[node name="Bone_Spawner" parent="." instance=ExtResource("3_aapjj")]
high_offset = 200.0
low_offset = -200.0
gap_size = 180.0
min_wait_time = 1.5
max_wait_time = 5.0

[node name="BoneDestructor" type="Area2D" parent="."]
position = Vector2(-162, 336)
script = ExtResource("4_nwda2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoneDestructor"]
shape = SubResource("RectangleShape2D_1oh33")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("6_853u8")

[node name="Score_Label" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_right = 128.0
offset_bottom = 132.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "0"
label_settings = SubResource("LabelSettings_46wfu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore_Label" type="Label" parent="UI"]
offset_left = 950.0
offset_top = 4.0
offset_right = 1135.0
offset_bottom = 60.0
text = "High score: 0"
label_settings = SubResource("LabelSettings_8tvqc")
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameOverScreen" parent="UI" instance=ExtResource("7_8cawq")]

[node name="Sounds" type="Node" parent="."]

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("8_nodmi")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("9_2le8b")
autoplay = true

[connection signal="area_entered" from="BoneDestructor" to="BoneDestructor" method="_on_area_entered"]
[connection signal="finished" from="Sounds/AudioStreamPlayer2D" to="Sounds/AudioStreamPlayer2D" method="_on_finished"]
